--- a/index.css
+++ b/index.css
@@ -1,194 +1,64 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;600;700;800;900&display=swap");
-.history {
-  border-radius: 2rem 2rem 0 0;
-  background-color: #e9ebf0;
-}
-
-.text-block#abouttext {
+.wrapper {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
+  grid-template-rows: 0.5fr 6fr 3.5fr;
+  height: 100vh;
 }
 
-.team {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, auto);
-  grid-column-gap: 0px;
-  grid-row-gap: 2rem;
-}
-
-.member {
-  display: grid;
-  grid-template-rows: auto auto;
-}
-
-.member-head {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.avatar {
-  display: flex;
-  align-items: flex-end;
-}
-.avatar img {
-  width: 80px;
-  height: 80px;
-}
-
-.name-and-skill {
-  display: grid;
-  grid-template-rows: 3fr 1fr;
-  padding-left: 1rem;
-}
-
-.member-name {
-  display: flex;
-  align-items: flex-end;
-  font-size: 1.4rem;
-  font-weight: 700;
-}
-
-.member-skill {
-  font-size: 1rem;
-  color: #9e9e9e;
-}
-
-.member-description {
-  padding-top: 0.4rem;
-}
-
-.image {
+.cover {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.image img {
-  width: 100%;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  border-radius: 1rem;
+
+.cover__text-block {
+  margin-top: 6rem;
 }
-.image .img-description {
+.cover__text-block .main-title {
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #000;
+}
+.cover__text-block .main-subtitle {
+  margin-top: 0.2rem;
   text-align: center;
   font-size: 1rem;
   color: #9e9e9e;
 }
 
-.soft {
-  display: grid;
-  grid-template-rows: repeat(4, auto);
-  gap: 2rem;
-  margin-top: 1rem;
+img.cover-image {
+  margin-top: auto;
+  margin-bottom: 0;
+  width: 400px;
 }
 
-.soft-card {
-  display: grid;
-  grid-template-rows: auto auto;
-  padding: 0.8rem 1rem;
-  border-left: 3px solid #5f85db;
-  background-color: #ebedf3;
-}
-
-.soft-head {
-  display: grid;
-  grid-template-columns: auto 1fr;
-}
-
-.soft-logo img {
-  width: 23px;
-  height: 23px;
-}
-
-.soft-name {
+.bottom {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  padding-left: 0.5rem;
-  padding-bottom: 0.5rem;
-  font-size: 1.4rem;
-  font-weight: 700;
-}
-
-.soft-description {
-  margin-top: 0.5rem;
-}
-
-@media screen and (min-width: 767px) {
-  .team, .soft {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 2rem;
-  }
-}
-@media screen and (min-width: 991px) {
-  .image img {
-    max-width: 40%;
-  }
-
-  .text-block#abouttext {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 2rem;
-  }
-}
-@media screen and (min-width: 1199px) {
-  .team {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-  }
-}
-.container {
-  width: 100%;
-}
-
-.main-space {
-  height: auto;
-  padding: 0 2rem;
-}
-
-.body-fixed {
-  overflow-y: hidden;
-}
-
-.section {
-  padding: 1rem 2rem;
-}
-
-.block {
-  padding: 1rem 0;
-}
-
-.block-title {
-  padding: 0.5rem 0;
-  font-size: 1.8rem;
-  font-weight: 700;
-}
-
-.text {
-  padding: 1rem 0;
+  padding: 3rem 3rem;
+  background-color: #3a40e7;
   font-size: 1rem;
-  color: #000;
-}
-
-button {
-  border: none;
-  background: none;
-}
-
-span.bold {
-  font-weight: 700;
-}
-
-span.accent {
-  padding: 0 0.7rem;
   color: #fff;
-  background-color: #5f85db;
 }
-@charset "UTF-8";
+
+.bottom-wrapper {
+  max-width: 600px;
+}
+
+#get-started-btn-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+
+#get-started-btn {
+  width: 10rem;
+  height: 3rem;
+  border-radius: 0.6rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
 * {
   margin: 0;
   padding: 0;
@@ -198,199 +68,75 @@ span.accent {
 html {
   font-family: "Montserrat";
   font-size: 14px;
-  background-color: #0f0f0f;
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-  padding: 1rem 0;
-}
-
-.logo {
-  font-size: 1.4rem;
-  font-weight: 700;
-  color: #fff;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-rows: 6fr 4fr;
-}
-
-.head {
-  display: flex;
-  flex-direction: column;
-  height: 60vh;
-}
-.head img {
-  width: 358px;
-  margin-bottom: 0;
-  margin-top: auto;
-}
-
-.slogan {
-  display: flex;
-  justify-content: center;
-  margin-top: 6rem;
-  text-align: center;
-  font-size: 2rem;
-  font-weight: 700;
-  -webkit-animation: animatebackInDown;
-          animation: animatebackInDown;
-  -webkit-animation-duration: 0.4s;
-          animation-duration: 0.4s;
-}
-
-.head-description {
-  display: flex;
-  justify-content: center;
-  margin-top: ю5rem;
-  text-align: center;
-  color: #9e9e9e;
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-.bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100vw;
-  height: 31.5vh;
-  margin-left: -2rem;
-  padding: 2rem;
-  background-color: #3a40e7;
-}
-
-.subslogan {
-  color: #fff;
-  font-size: 1.2rem;
-}
-
-.start-btn {
-  width: 160px;
-  margin-top: 2rem;
-  padding: 1rem 2rem;
-  border-radius: 1.5rem;
-  background-color: #e9ebf0;
-  font-family: "Montserrat";
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-.popup {
-  max-width: 500px;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  padding: 1.5rem;
-  border-radius: 1.5rem;
-  color: #fff;
-  background-color: #5f85db;
-  box-shadow: 0px 0px 26.9px rgba(0, 0, 0, 0.03), 0px 0px 215px rgba(0, 0, 0, 0.06);
-}
-
-.close-popup-btn {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  color: #000;
-}
-.close-popup-btn img {
-  width: 25px;
-  height: 25px;
-}
-
-.popup-title {
-  font-size: 1.4rem;
-  font-weight: 700;
-}
-
-.popup-message {
-  margin-top: 1rem;
-}
-
-.popup-buttons {
-  display: flex;
-  align-items: center;
-  margin-top: 1rem;
-}
-
-.popup-btn {
-  padding: 0.5rem 2rem;
-  border: none;
-  border-radius: 0.5rem;
-  font-family: "Montserrat";
-  font-size: 1.2rem;
-}
-.popup-btn#popup-yes {
-  color: #000;
-  background-color: #e9ebf0;
-  border: 2px solid #5f85db;
-}
-.popup-btn#popup-yes:active, .popup-btn#popup-yes:hover {
-  background-color: #90b8f8;
-}
-.popup-btn#popup-no {
-  margin-left: 1rem;
-  color: #e9ebf0;
-  border: 2px solid #e9ebf0;
-}
-.popup-btn#popup-no:active {
-  background-color: #90b8f8;
-}
-.sidebar {
-  position: absolute;
-  width: 75vw;
-  height: 100vh;
-  background-color: #3a40e7;
-  transform: translateX(-100%);
-  transition: 0.4s ease-in-out;
-}
-
-.sidebar-anim {
-  transform: translateX(0%);
-  transition: 0.4s ease-in-out;
-}
-
-.sidebar-title {
-  padding: 3rem 2rem;
-  font-size: 1.4rem;
-  font-weight: 700;
-  color: #fff;
-}
-
-.sidebar-list {
-  padding: 0 2rem;
+ul {
   list-style: none;
 }
-.sidebar-list a {
-  text-decoration: none;
-  color: #fff;
+
+button {
+  border: none;
+  font-family: "Montserrat";
+}
+#navigation_bar {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  padding: 1rem 2rem;
 }
 
-.sidebar-el {
-  padding: 0.5rem 0;
-  font-size: 1.4rem;
-}
-
-.sidebar-btn {
+#logo {
   display: flex;
   align-items: center;
-  margin-left: auto;
-  margin-right: 0;
-  padding: 10px 10px;
-  border-radius: 0.8rem;
-  transition: 0.4s ease-out;
-  background-color: #e9ebf0;
-  box-shadow: 0px 0px 26.9px rgba(0, 0, 0, 0.03), 0px 0px 215px rgba(0, 0, 0, 0.06);
+  font-size: 1.6rem;
+  font-weight: 700;
 }
-.sidebar-btn img {
+
+#sidebar-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  border-radius: 0.7rem;
+  background-color: #e9ebf0;
+  transition: 0.3s ease;
+  box-shadow: 0px 0px 6px -63px rgba(0, 0, 0, 0.135), 0px 0px 16.7px -63px rgba(0, 0, 0, 0.192), 0px 0px 40.1px -63px rgba(0, 0, 0, 0.24), 0px 0px 133px -63px rgba(0, 0, 0, 0.36);
+}
+#sidebar-btn img {
   width: 30px;
   height: 30px;
 }
 
-.sidebar-btn-anim {
-  box-shadow: 0px 0px 25.2px rgba(0, 0, 0, 0.06), 0px 0px 201px rgba(0, 0, 0, 0.12);
+.sidebar-btn-animation {
   transform: rotate(90deg);
-  transition: 0.4s ease-in;
+  transition: 0.3s ease;
+}
+.sidebar {
+  position: absolute;
+  width: 70vw;
+  height: 100vh;
+  padding: 3rem 2rem;
+  background-color: #0f0f0f;
+  transform: translateX(-100%);
+  transition: 0.3s ease;
+}
+
+.sidebar-opened {
+  transform: translateX(0%);
+  transition: 0.3s ease;
+}
+
+.sidebar-title {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+.menu-list {
+  margin-top: 2rem;
+}
+
+.list-el {
+  padding: 0.2rem 0;
+  font-size: 1.2rem;
+  color: #fff;
 }
