--- a/index.css
+++ b/index.css
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #e9ebf0;
+  background-color: #f7f7f7;
 }
 
 .cover__text-block {
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 .cover__text-block .main-title {
   text-align: center;
@@ -23,13 +23,14 @@
 }
 
 img.cover-image {
-  margin-top: 4rem;
+  margin-top: 3rem;
   margin-bottom: 0;
   width: 400px;
 }
 
 .bottom {
   display: flex;
+  justify-content: center;
   padding: 2rem 2rem;
   background-color: #3a40e7;
   font-size: 1rem;
@@ -162,7 +163,7 @@ button {
   margin: 2rem 0;
   padding: 2rem 2rem;
   border-radius: 1rem;
-  background-color: #e9ebf0;
+  background-color: #f7f7f7;
 }
 
 .block-title {
@@ -194,7 +195,7 @@ button {
   display: grid;
   grid-template-columns: 1fr auto;
   padding: 1rem 2rem;
-  background-color: #e9ebf0;
+  background-color: #f7f7f7;
 }
 
 #logo {
@@ -210,7 +211,7 @@ button {
   align-items: center;
   padding: 0.5rem;
   border-radius: 0.7rem;
-  background-color: #e9ebf0;
+  background-color: #f7f7f7;
   transition: 0.3s ease;
   box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.02), 0px 0px 5.3px rgba(0, 0, 0, 0.028), 0px 0px 10px rgba(0, 0, 0, 0.035), 0px 0px 17.9px rgba(0, 0, 0, 0.042), 0px 0px 33.4px rgba(0, 0, 0, 0.05), 0px 0px 80px rgba(0, 0, 0, 0.07);
 }
@@ -222,29 +223,6 @@ button {
 .sidebar-btn-animation {
   transform: rotate(90deg);
   transition: 0.3s ease;
-}
-
-.sidebar-icon-transition {
-  -webkit-animation: sidebar-icon-transition 1s ease;
-          animation: sidebar-icon-transition 1s ease;
-}
-
-@-webkit-keyframes sidebar-icon-transition {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes sidebar-icon-transition {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 
 .sidebar {
