--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fafafa;
+  background-color: #d1d1d1;
 }
 
 .cover__text-block {
@@ -29,7 +29,7 @@
 }
 
 img.cover-image {
-  margin-top: 2rem;
+  margin-top: 3rem;
   margin-bottom: 0;
   width: 400px;
 }
@@ -38,9 +38,9 @@ img.cover-image {
   display: flex;
   justify-content: center;
   padding: 2rem 2rem;
-  background-color: #3a40e7;
+  background-color: #ffffff;
   font-size: 1rem;
-  color: #fff;
+  color: #000;
 }
 
 .bottom-wrapper {
@@ -58,18 +58,19 @@ img.cover-image {
   width: 10rem;
   height: 3rem;
   border-radius: 0.6rem;
+  background-color: #0f0f0f;
   font-size: 1.2rem;
   font-weight: 600;
-  color: #000;
+  color: #fff;
 }
 .wrapper#about_page {
-  background-color: #3a40e7;
+  background-color: #ffffff;
 }
 .wrapper#about_page #navigation_bar {
-  background-color: #3a40e7;
+  background-color: #ffffff;
 }
 .wrapper#about_page #navigation_bar #logo {
-  color: #fff;
+  color: #000;
 }
 
 .team {
@@ -124,32 +125,38 @@ img.cover-image {
 
 .instruments {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 1rem;
 }
 
 .instruments__card {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 2rem;
   border-radius: 1rem;
-  background-color: #fafafa;
+  background-color: #d1d1d1;
 }
 
-.card__icon {
+.card__head {
+  display: flex;
+  flex-direction: row;
+}
+
+.card__head__icon {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.card__icon img {
-  width: 80px;
-  height: 80px;
+.card__head__icon img {
+  width: 50px;
+  height: 50px;
 }
 
-.card__name {
-  text-align: center;
-  font-size: 1.2rem;
+.card__head__name {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  font-size: 1.4rem;
   font-weight: 700;
 }
 
@@ -179,7 +186,7 @@ img.cover-image {
 .footer {
   display: flex;
   height: 200px;
-  background-color: #fafafa;
+  background-color: #d1d1d1;
 }
 .footer p {
   margin: auto;
@@ -204,6 +211,7 @@ body {
 }
 
 ul {
+  padding: 0.5rem 0;
   list-style: none;
 }
 
@@ -225,15 +233,16 @@ button {
 
 .block {
   margin: 1rem 0;
-  padding: 2rem 2rem;
+  padding: 2rem;
   border-radius: 1rem;
-  background-color: #fafafa;
+  background-color: #d1d1d1;
 }
 
 .block__title {
   padding: 0 0 1rem 0;
   font-size: 1.6rem;
   font-weight: 700;
+  color: #000;
 }
 
 .section {
@@ -244,6 +253,24 @@ button {
   padding: 0.5rem 0;
   font-size: 1rem;
   font-weight: 500;
+  color: #000;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0 0.5rem 0;
+}
+.image img {
+  width: 320px;
+  border-radius: 1rem;
+}
+
+.image-description {
+  padding-bottom: 0.5rem;
+  text-align: center;
+  font-size: 1rem;
+  color: #9e9e9e;
 }
 
 @media screen and (min-width: 991px) {
@@ -262,8 +289,8 @@ button {
 #navigation_bar {
   display: grid;
   grid-template-columns: 1fr auto;
-  padding: 2rem 2rem;
-  background-color: #fafafa;
+  padding: 1rem 2rem;
+  background-color: #d1d1d1;
 }
 
 #logo {
@@ -271,6 +298,7 @@ button {
   align-items: center;
   font-size: 1.6rem;
   font-weight: 700;
+  color: #000;
 }
 
 #sidebar-btn {
@@ -279,7 +307,7 @@ button {
   align-items: center;
   padding: 0.5rem;
   border-radius: 0.7rem;
-  background-color: #fafafa;
+  background-color: #d1d1d1;
   transition: 0.3s ease;
   box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.02), 0px 0px 5.3px rgba(0, 0, 0, 0.028), 0px 0px 10px rgba(0, 0, 0, 0.035), 0px 0px 17.9px rgba(0, 0, 0, 0.042), 0px 0px 33.4px rgba(0, 0, 0, 0.05), 0px 0px 80px rgba(0, 0, 0, 0.07);
 }
@@ -292,7 +320,99 @@ button {
   transform: rotate(90deg);
   transition: 0.3s ease;
 }
+.wrapper#services_page {
+  background-color: #ffffff;
+}
+.wrapper#services_page #navigation_bar {
+  background-color: #ffffff;
+}
+.wrapper#services_page #navigation_bar #logo {
+  color: #000;
+}
 
+.instruments {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.instruments__tool-card {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  border-radius: 1rem;
+  background-color: #0f0f0f;
+  -webkit-animation: backInLeft;
+          animation: backInLeft;
+}
+.instruments__tool-card#html-tool-card {
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+}
+.instruments__tool-card#scss-tool-card {
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+.instruments__tool-card#js-tool-card {
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+}
+.instruments__tool-card#php-tool-card {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+}
+
+.tool-card__head {
+  display: flex;
+  flex-direction: row;
+  color: #fff;
+}
+
+.tool-card__head__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tool-card__head__icon img {
+  width: 50px;
+  height: 50px;
+}
+
+.tool-card__head__name {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+.tool-card__description {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  color: #fff;
+}
+
+.framework-list__element {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0;
+  font-size: 1.2rem;
+  color: #70a6fd;
+}
+
+.framework-list__element__description {
+  padding: 0.5rem 0;
+  font-size: 1rem;
+  color: #9e9e9e;
+}
+
+@media screen and (min-width: 1199px) {
+  .instruments {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+  }
+}
 .sidebar {
   position: absolute;
   width: 70vw;
